--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -69,7 +69,7 @@ p {
 }
 
 #mainNav {
-  background-color: rgba(47, 23, 15, 0.9);
+  background-color: rgba(47, 23, 15, 1);
   font-family: 'Raleway';
 }
 
@@ -82,7 +82,7 @@ p {
   font-weight: 800;
 }
 
-#mainNav .navbar-nav .nav-item.active .nav-link {
+#mainNav .navbar-nav .nav-item .nav-link.active {
   color: #e6a756;
 }
 
@@ -93,7 +93,7 @@ p {
   #mainNav .navbar-nav .nav-item .nav-link:hover {
     color: rgba(255, 255, 255, 0.4);
   }
-  #mainNav .navbar-nav .nav-item.active .nav-link:hover {
+  #mainNav .navbar-nav .nav-item .nav-link.active:hover {
     color: #e6a756;
   }
 }
@@ -219,7 +219,7 @@ p {
 }
 
 .footer {
-  background-color: rgba(47, 23, 15, 0.9);
+  background-color: rgba(47, 23, 15, 1);
 }
 
 .text-primary {
